--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -17,7 +17,7 @@
       content="Uffai.com | AI website | Helps user to generate content using AI"
     />
 
-    <link rel="apple-touch-icon" href="https://aiprojectfilestorage.s3.ap-southeast-2.amazonaws.com/icons/Screenshot+2023-10-01+at+10.40.56+AM.png" />
+    <link rel="apple-touch-icon" href="https://uffiafilestorage.s3.amazonaws.com/icons/Screenshot+2023-10-01+at+10.40.56+AM.png" />
     <link href="https://fonts.cdnfonts.com/css/helvetica-neue-9" rel="stylesheet" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
